# SAAS-TEMPLATE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  tsconfig.base.json  tsconfig.json  tsconfig.lint.json
.changeset/: README.md  phase-1-headless-core.md  phase-2-workspace.md  phase-3-lifecycle.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml
apps/docs/: README.md  mdx-components.tsx  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/marketing/: .env.example  README.md  package.json  tsconfig.json
apps/web/: .env.example  .gitignore  CHANGELOG.md  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
docs/: USAGE.md
e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: anonymous-zip.spec.ts  exit-criterion.spec.ts  health.spec.ts  recommender.spec.ts  share-link.spec.ts
infra/firebase/: .gitignore  README.md  firebase.json  (+3 more)
scripts/: prerender-flutter.ts  validate-templates.ts
src/: fs.ts  git.ts  index.ts  placeholders.ts  prompts.ts  scaffold.ts  schemas.ts  types.ts  utils.ts
templates/backend-fastapi/_supabase/: .env.example  README.md  pyproject.toml
templates/backend-fastapi/_supabase/app/core/: auth.py  db.py
tests/: agent-rules.test.ts  flags.test.ts  placeholders.test.ts  saas-config.test.ts  scaffold.e2e.test.ts  templates.test.ts  utils.test.ts
(+207 files in other folders)
